--- a/visiweather.ui
+++ b/visiweather.ui
@@ -6,18 +6,29 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>377</width>
-    <height>404</height>
+    <width>360</width>
+    <height>390</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Visiweather</string>
+  </property>
+  <property name="layoutDirection">
+   <enum>Qt::LeftToRight</enum>
+  </property>
+  <property name="autoFillBackground">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>20</x>
       <y>20</y>
       <width>229</width>
       <height>231</height>
@@ -31,7 +42,7 @@
       <enum>QLayout::SetFixedSize</enum>
      </property>
      <item>
-      <layout class="QGridLayout" name="grandlayout" rowstretch="0,100" columnstretch="0">
+      <layout class="QGridLayout" name="grandlayout" rowstretch="0,0" columnstretch="0">
        <property name="sizeConstraint">
         <enum>QLayout::SetMinAndMaxSize</enum>
        </property>
@@ -91,12 +102,6 @@
      </item>
     </layout>
    </widget>
-   <zorder>layoutWidget</zorder>
-   <zorder>labelChoisirVille</zorder>
-   <zorder>labelVilleOk</zorder>
-   <zorder>verticalLayoutWidget_2</zorder>
-   <zorder>verticalLayoutWidget_2</zorder>
-   <zorder>listView</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
