--- a/visiweather.ui
+++ b/visiweather.ui
@@ -75,10 +75,10 @@
               <string/>
              </property>
              <property name="frame">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="dragEnabled">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="placeholderText">
               <string>Saisir une localisation</string>
